[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-monitor"
version = "0.1.0"
description = "AI-Powered API Monitoring SaaS"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "alembic>=1.13",
    "bcrypt>=4.1",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
